--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <ul>
         <li><a href="Hello World.html"> Hello World</a></li>
         <li><a href="Brownsville Bagels Menu.html"> Brownsville Bagels Menu</a></li>
-        <li><a href="bagels.html"> Bagels</a></li>
+        <li><a href="planets.html"> Bagels</a></li>
         <li> more will go here...</li>
     </ul>
 
