--- a/index.html
+++ b/index.html
@@ -7,6 +7,28 @@
             <title> Jaden Auville </title>
     </head>
 
+<style>
+    a {text-decoration: none;}
+a:link {color: #ff00bb;}
+a:visited {color: #ff3131;}
+a:hover {color: #000243;}
+a:active {color:#36a5ff}
+</style>
+
+<body style="background-image: url(blue.jpg); font-family: Arial, Helvetica, sans-serif;"></body>
+
+
+
+<body style="background-color: #36a5ff;font-family: Arial, Helvetica, sans-serif;">
+    <table border="2" style="width: 50%; color: #100089; background-color: #c8c1d0;margin: auto;">
+    <tr>
+        <td><a href="index.html">HOME</a></td>
+        <td><a href="https://www.pvcc.edu/">PVCC</a></td>
+        <td><a href="https://www.w3schools.com/">W3 SCHOOLS</a></td>
+        <td><a href="">CONTACT US</a></td>
+    </tr>
+
+
 <body style="background-color: #36a5ff;font-family: Arial, Helvetica, sans-serif;">
 <table border="2" style="width: 50%; color: #100089; background-color: #c8c1d0;margin: auto;">
 
@@ -29,7 +51,7 @@
     <h2> CSC 221 Web Pages </h2>
     <ul>
         <li><a href="Hello World.html"> Hello World</a></li>
-        <li><a href="Brownsville Bagels Menu.html"> Brownsville Bagels Menu</a></li>
+        <li><a href="bagels.html"> Brownsville Bagels Menu</a></li>
         <li><a href="planets.html"> Planets</a></li>
         <li> more will go here...</li>
     </ul>
