--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 
 <style>
     a {text-decoration: none;}
-a:link {color: #ff00bb;}
-a:visited {color: #ff3131;}
-a:hover {color: #000243;}
+a:link {color: #0099ff;}
+a:visited {color: #ff7b10;}
+a:hover {color: #5b0c36;}
 a:active {color:#36a5ff}
 </style>
 
