--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@ a:active {color:#36a5ff}
         <li><a href="Hello World.html"> Hello World</a></li>
         <li><a href="bagels.html"> Brownsville Bagels Menu</a></li>
         <li><a href="planets.html"> Planets</a></li>
+        <li><a href="githubinfo.html">GitHub Info</a></li>
         <li> more will go here...</li>
     </ul>
 
