--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ a:active {color:#36a5ff}
         <li><a href="https://docs.google.com/presentation/u/3/d/1ZGd9kvC9UpIdSF_deWQxwOz2CHp3ITz7n7yJWiAu8hU/edit?ouid=112386429882488317883&usp=slides_home&ths=true"> Civic Engagement</a></li>
         <li><a href="https://docs.google.com/presentation/d/12Km_w4QwaQC6NljRCSK2039s-HXa6Am3aPifvS0yTQo/edit#slide=id.p"> Chapter 1: Data Storage</a></li>
         <li><a href="https://docs.google.com/presentation/d/1RnM3BSC2A4VTXn_Q-0SzraORfNCtkn4TOF3p5yBUq2Y/edit"> Chapter 2: Machine Architecture</a></li>
-        <li> Chapter 3: Operating Systems Terminology</a></li>
+        <li><a href="ch3opsys.html">Chapter 3: OpSys Terms</a></li>
         <li> Chapter 4: Networking & The Internet </a></li>
         <li> Chapter 5: Programming Algorithms & Software Testing </a></li>
         <li> Chapter 6: Programming Languages </a></li>
