--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@ a:active {color:#36a5ff}
     <h2> CSC 221 Python Programs</h2>
     <ul>
         <li><a href="helloworld.py">Hello World</a></li>
+        <li><a href="tickets.py">Cinema House Movies</a></li>
         <li> Python Programs will go here...</li>
     </ul>
     <br />
