--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@ a:active {color:#36a5ff}
         <li><a href="tickets.py">Cinema House Movies</a></li>
         <li><a href="branch.py">Branch Barbeque Buffet</a></li>
         <li><a href="palermopizza.py">Palermo Pizza</a></li>
+        <li><a href="8ball.py">Magic-8 Ball</a></li>
         <li> Python Programs will go here...</li>
     </ul>
     <br />
