--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@ a:active {color:#36a5ff}
         <li><a href="branch.py">Branch Barbeque Buffet</a></li>
         <li><a href="palermopizza.py">Palermo Pizza</a></li>
         <li><a href="8ball.py">Magic-8 Ball</a></li>
+        <li><a href="dogs.py">List of dog names</a></li>
         <li> Python Programs will go here...</li>
     </ul>
     <br />
