--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ a:active {color:#36a5ff}
         <li><a href="https://docs.google.com/presentation/d/1RnM3BSC2A4VTXn_Q-0SzraORfNCtkn4TOF3p5yBUq2Y/edit"> Chapter 2: Machine Architecture</a></li>
         <li><a href="ch3opsys.html">Chapter 3: OpSys Terms</a></li>
         <li><a href="ch4network.html">Chapter 4: Networking & The Internet </a></li>
-        <li> Chapter 5: Programming Algorithms & Software Testing </a></li>
+        <li><a href="chapter5.html">Chapter 5: Programming Algorithms & Software Testing </a></li>
         <li> Chapter 6: Programming Languages </a></li>
         <li> Chapter 7: Software Engineering </a></li>
     </ul>
