--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ a:active {color:#36a5ff}
 
     <h2> Civic Engagement Projects </h2>
     <ul>
-        <li> C.E. project will go here...</li>
+        <li><a href="civichome.html">Civic Engagement Project</a></li>
     </ul>
 
     <h2> CSC 221 Python Programs</h2>
@@ -71,6 +71,7 @@ a:active {color:#36a5ff}
         <li><a href="8ball.py">Magic-8 Ball</a></li>
         <li><a href="dogs.py">List of dog names</a></li>
         <li><a href="taxlists.py">PerPropTax using LISTS</a></li>
+        <li><a href="freshfood.py">Fresh Food</a></li>
         <li> Python Programs will go here...</li>
     </ul>
     <br />
