--- a/civicsources.html
+++ b/civicsources.html
@@ -4,7 +4,7 @@
     <!--Program Purpose: This is my civic engagement project.-->
 
     <head>
-            <title> US Title Code 18 </title>
+            <title> Sources </title>
     </head>
 
 
