--- a/civichome.html
+++ b/civichome.html
@@ -14,7 +14,7 @@
         <tr>
             <td><a href="civichome.html">HOME</a></td>
             <td><a href="civicsources.html">SOURCES</a></td>
-            <td><a href="https://forms.gle/QhnrqBVTFugWh18N7">Take the Quiz</a></td>
+            <td><a href="civicquiz.html">Take the Quiz</a></td>
         </tr>
     
 
