--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ a:active {color:#36a5ff}
         <li><a href="ch4network.html">Chapter 4: Networking & The Internet </a></li>
         <li><a href="chapter5.html">Chapter 5: Programming Algorithms & Software Testing </a></li>
         <li> Chapter 6: Programming Languages </a></li>
-        <li> Chapter 7: Software Engineering </a></li>
+        <li><a href="chapter7.html">Chapter 7: Software Engineering </a></li>
     </ul>
 
     <h2> CSC 221 Web Pages </h2>
