--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@ a:active {color:#36a5ff}
         <li><a href="taxlists.py">PerPropTax using LISTS</a></li>
         <li><a href="perproptaxloop.py">PerPropTax using LOOPS</a></li>
         <li><a href="freshfood.py">Fresh Food</a></li>
+        <li><a href="tuitionandfees.py">College Tuition & Fees</a></li>
         <li><a href="emerald_hotel_and_resort.py">Emerald Hotel</a></li>
         <li> Python Programs will go here...</li>
     </ul>
